# dependabot-demo

./: Dockerfile
.github/: dependabot.yml
.github/workflows/: autoapprove.yml
javascript/: package.json
python/: pyproject.toml
python/some_dir/: requirements.txt
