[tool.poetry]
name = "test"
version = "1.0.0"
description = " test"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
setuptools = "71.1.0"
ciso8601 = "2.3.0"
croniter = "1.3.7"
cryptography = "38.0.1"
dependency-injector = "4.40.0"
elasticsearch-dsl = "7.4.0"
eventlet = "0.33.3"
filetype = "1.1.0"
fold-to-ascii = "1.0.2.post1"
isoweek = "1.3.3"
jsonschema = "4.23"
marshmallow = "3.18.0"
marshmallow-dataclass = { version = "8.5.14", extras = ["union"] }
marshmallow-enum = "1.5.1"
marshmallow-oneofschema = "3.0.1"
marshmallow-union = "0.1.15.post1"
opensearch-py = "2.0.0"
orjson = "3.8.5"
parsedatetime = "2.6"
urllib3 = "1.26.19"
validators = "0.20.0"
vokativ = "1.2.1"
zxcvbn = "4.4.28"

[tool.poetry.group.testing.dependencies]
behave = "1.2.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core==1.8.1"]
build-backend = "poetry.core.masonry.api"
